Created two lists, settings and all others
